test-ingress/nginx-ingress-expose.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.felipeg.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8081
