test-ingress/nginx2-ingress-expose.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx2
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: one.felipeg.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx2
          servicePort: 80
